[package]
name = "options_pricing_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "options_pricing_engine"
path = "src/main.rs"

[lib]
name = "options_pricing_engine"
path = "src/lib.rs"

[dependencies]
num-complex = "0.4"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
